# IIKO-KPF-V1

./: .env.example  .gitignore  CLAUDE.md  IIKO_KNOWLEDGE_BASE.md  IIKO_MASTER_REFERENCE.md  docker-compose.yml  task.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7fb054f09b73_initial_tables.py  b7925989dcf6_add_writeoff_detail_columns.py
backend/app/: dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: branches.py  dashboard.py  labor.py  revenue.py  sync.py  writeoffs.py
backend/app/api/v1/schemas/: branch.py  common.py  dashboard.py  labor.py  revenue.py  sync.py  writeoffs.py
backend/app/core/: config.py  logger.py
backend/app/db/: engine.py
backend/app/models/: __init__.py  branch.py  daily_revenue.py  employee_attendance.py  staff_rate.py  sync_log.py  writeoff.py
backend/app/services/: iiko_client.py  kpf_service.py  labor_service.py  revenue_service.py  sync_service.py  transformers.py  writeoff_service.py
backend/app/worker/: scheduler.py
backend/app/worker/tasks/: daily_sync.py
backend/tests/: test_sync_helpers.py  test_transformers.py
docs/: KNOWLEDGE_MAP.md
docs/iiko_api_raw/: akty-spisaniya.html  akty-spisaniya.txt  api-edi-5-0.html  api-edi-5-0.txt  api-edi-5-1-6-4.html  api-edi-5-1-6-4.txt  avtorizatsiya.html  avtorizatsiya.txt  elementy-nomenklatury.html  elementy-nomenklatury.txt  (+99 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: fetch_iiko_docs.py  test_api_fetch.py  test_iiko_connection.py
(+16 files in other folders)
